--- a/request.html
+++ b/request.html
@@ -17,7 +17,8 @@
     <div class="request">
       <div class="box"></div>
       <h1 class="title_request">REQUEST</h1>
-      <h1 class="title">preparation...</h1>
+      <h1 class="title">ご依頼について</h1>
+      <h2 class="req_txt">ご依頼は、メール (works.celine@gmail.com) または、Twitter (@I_Celine_)のDMへお願いします。</h2>
       <div class="nav">
         <nav>
           <ul class="main-nav">
