--- a/request.html
+++ b/request.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="jp">
   <head>
     <meta charset="utf-8">
-    <title>Request</title>
-    <meta name="description" content="せりねのサイト。">
-    <link rel="icon" type="image/jpg" href="celine.jpg"
+    <title>REQUEST</title>
+    <meta name="description" content="CELINE's Official Site.">
+    <link rel="icon" type="image/jpg" href="celine.jpg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway:400,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
     <link rel="stylesheet" href="request.css">
-  </head>
 
+  </head>
   <body>
-    <div class="request">
-      <div class="box"></div>
-      <h1 class="title_request">REQUEST</h1>
-      <h1 class="title">ご依頼について</h1>
-      <h2 class="req_txt">ご依頼は、メール (works.celine@gmail.com) または、Twitter (@I_Celine_)のDMへお願いします。</h2>
-      <div class="nav">
-        <nav>
-          <ul class="main-nav">
-            <li><a href="index.html">Top</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="works.html">Works</a></li>
-            <li><a href="request.html">Request</a></li>
-          </ul>
-        </nav>
+    <div class="top_text">
+      <h1 class="title">REQUEST</h1>
+      <p class="request_text"><a href="https://twitter.com/I_Celine_">Twitter</a>のDMまたは(works.celine@gmail.com)へ。</p>
       </div>
     </div>
-
     <footer>
-      <p class="copy"><small>&copy; 2020 CELINE</small></p>
+      <nav>
+        <ul class="main-nav">
+          <li class="menu">MENU</</li>
+          <li class="line"></li>
+          <li><a href="index.html">TOP</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="works.html">WORKS</a></li>
+          <li><a href="request.html">REQUEST</a></li>
+        </ul>
+      </nav>
     </footer>
+    <div class="copylight">
+      <address class="copy">© Celineworks All Rights Reserved.</address>
+    </div>
+
   </body>
+</html>
