--- a/about.html
+++ b/about.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="jp">
   <head>
     <meta charset="utf-8">
-    <title>About</title>
-    <meta name="description" content="せりねのサイト。">
-    <link rel="icon" type="image/jpg" href="celine.jpg"
+    <title>ABOUT</title>
+    <meta name="description" content="CELINE's Official Site.">
+    <link rel="icon" type="image/jpg" href="celine.jpg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway:400,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
     <link rel="stylesheet" href="about.css">
-  </head>
 
+  </head>
   <body>
-    <div class="about">
-      <div class="box"></div>
-      <h1 class="title_about">ABOUT</h1>
-      <h1 class="name_title">CELINE</h1>
-      <h2 class="about_text">Graphic Deshigner</h2>
-      <div class="border_1"></div>
-      <h3 class="about_text2">主にデザイン、3DCGや映像を手掛けています。2004年生まれ、兵庫県出身。</h3>
-      <div class="sns">
-        <a href="https://twitter.com/I_Celine_" class="twitter_txt">Twitter</a>
-      </div>
-      <div class="nav">
-        <nav>
-          <ul class="main-nav">
-            <li><a href="index.html">Top</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="works.html">Works</a></li>
-            <li><a href="request.html">Request</a></li>
-          </ul>
-        </nav>
+    <div class="top_text">
+      <h1 class="title">ABOUT</h1>
+      <div class="table_01">
+        <img src="celine.jpg" alt="CELINE" class="celimg">
+        <div class="about_txt2">
+          <h1 class="name">CELINE/せりね</h1>
+          <h2 class="about_text">Graphic Designer</h2>
+          <p class="about_text_p">
+            2004年生まれ、兵庫県出身。
+            <br>
+            主にデザインや、モーショングラフィックス、3DCGを手掛ける。
+          </p>
+        </div>
       </div>
     </div>
-
     <footer>
-      <p class="copy"><small>&copy; 2020 CELINE</small></p>
+
+      <nav>
+        <ul class="main-nav">
+          <li class="menu">MENU</</li>
+          <li class="line"></li>
+          <li><a href="index.html">TOP</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="works.html">WORKS</a></li>
+          <li><a href="request.html">REQUEST</a></li>
+        </ul>
+      </nav>
     </footer>
+    <div class="copylight">
+      <address class="copy">© Celineworks All Rights Reserved.</address>
+    </div>
+
   </body>
+</html>
