--- a/works.html
+++ b/works.html
@@ -17,6 +17,7 @@
     <div class="top_text">
       <h1 class="title">WORKS</h1>
       <p class="works_text">準備中... / preparation...</p>
+      <a href="https://celineworks.tumblr.com/"><p class="tumblr_text">Tumblrに載せてます(小声)</p></a> 
       </div>
     </div>
     <footer>
