--- a/request.html
+++ b/request.html
@@ -22,7 +22,7 @@
     <footer>
       <nav>
         <ul class="main-nav">
-          <li class="menu">MENU</</li>
+          <li class="menu">MENU</li>
           <li class="line"></li>
           <li><a href="index.html">TOP</a></li>
           <li><a href="about.html">ABOUT</a></li>
