--- a/index.html
+++ b/index.html
@@ -2,34 +2,10 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8">
-    <title>CELINEWORKS</title>
-    <meta name="description" content="CELINE's Official Site.">
-    <link rel="icon" type="image/jpg" href="celine.jpg">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
-    <link rel="stylesheet" href="index.css">
-
+    <title>CELINE | GraphicDesigner</title>
   </head>
   <body>
-
-    <div class="bg">
-    <div class="top_text">
-      <h1 class="title">CELINEWORKS</h1>
-      <h2 class="about_text">Graphic Designer</h2>
-      <nav>
-        <ul class="main-nav">
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="works.html">WORKS</a></li>
-          <li><a href="request.html">REQUEST</a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="copylight">
-      <address class="copy">© Celineworks All Rights Reserved.</address>
-    </div>
-  </div>
+    <h1>工事中です<h1>
+      <h2>またきてね</h2>
   </body>
 </html>
