--- a/index.html
+++ b/index.html
@@ -302,10 +302,12 @@
          });
 </script>
 <script>
+    if(!navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/)){
     luxy.init({
         wrapper: '#luxy',
         targets : '.luxy-el',
         wrapperSpeed:  0.09
-    });    
+    });
+    }
 </script>
 </html>
