--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>CELINE</title>
-    <meta name="description" content="ウオ～～～">
+    <meta name="description" content="Celine's Portfolio.">
     <link rel="icon" type="image/png" href="assets/icon/favicon.png">
 
     <!-- ogp_data -->
     <meta property="og:title" content="CELINE" />
     <meta property="og:type" content="website">
-    <meta property="og:description" content="ウオ～～～">
+    <meta property="og:description" content="Celine's Portfolio.">
     <meta property="og:site_name" content="CELINE" />
     <meta property="og:image" content="https://celineworks.github.io/assets/icon/favicon.png">
     <meta property="og:url" content="https://celineworks.github.io/">
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="https://celineworks.github.io/" />
     <meta name="twitter:title" content="CELINE">
-    <meta name="twitter:description" content="ウオ～～～"/>
+    <meta name="twitter:description" content="Celine's Portfolio."/>
     <meta name="twitter:image:src" content="https://celineworks.github.io/assets/icon/favicon.png"/>
 
     <!-- CSS -->
@@ -33,6 +33,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="/js/jquery.fademover.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            $("body").fadeMover({
+                'inSpeed': 800,
+                'outSpeed': 400,
+            });
+        });
+    </script>
 
     <script>
         (function(d) {
@@ -48,8 +59,14 @@
     <script src="js/luxy.min.js"></script>
 
     <script src="js/top_page.js"></script>
+
+    <script>
+        setTimeout(function () {
+            document.getElementsByTagName("html")[0].classList.add("loading-delay");
+        }, 3000);
+    </script>
 </head>
-<body>
+<body id="scrollbar" class="scrollbar">
     <div id="luxy">
     <!-- MAIN CONTENTS -->
     <div class="wrapper">
@@ -299,7 +316,7 @@
          interval: 200,
          distance: '40px',
          easing: 'cubic-bezier(.19,.04,.07,.97)',
-         });
+    });
 </script>
 <script>
     if(!navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/)){
